# guardrail_framework_complete

./: .env.example  .gitignore  API_REFERENCE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DELIVERY_SUMMARY.md  Dockerfile  IMPLEMENTATION_GUIDE.md  INDEX.md  MANIFEST.md  METHODOLOGY.md  QUICK_REFERENCE.md  README.md  SECURITY.md  SETUP_GUIDE.md  TECH_STACK.html  alembic.ini  benchmark_report.py  benchmark_template.md  docker-compose.yml  docker-entrypoint.sh  entrypoint.sh  patch_static.py  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: backend_request.md  false_positive.md  new_probe.md
.github/workflows/: ci.yml  monthly_benchmark.yml  pages.yml
benchmarks/: benchmark_2026_06.json  benchmark_2026_06.md
docs/: alembic.ini  index.html  latest_index.json
docs/benchmarks/: benchmark_2026_06.json  benchmark_2026_06.md
guardrail-dashboard/: DASHBOARD_SETUP.md  package-lock.json  package.json
guardrail-dashboard/public/: index.html
guardrail-dashboard/src/: App.jsx  api.js
guardrail_framework/: ARCHITECTURE.md  OPA_PARITY.md  README.md  __init__.py  auth.py  bundle.py  compiler.py  core.py  dashboard.jsx  decision_log.py  examples.py  observability.py  opa_gaps.py  persistence.py  probes.py  rate_limiter.py  red_team_runner.py  report_signer.py  server.py
tests/: test_compiler.py  test_core.py  test_observability.py  test_server.py
